--- a/DsWorkAndroid/res/layout/person_get_item2.xml
+++ b/DsWorkAndroid/res/layout/person_get_item2.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/listview_item_bg"
   	android:descendantFocusability="blocksDescendants">
   	<include 
   	    layout="@layout/item_id" 
@@ -15,12 +16,12 @@
   	    android:layout_toRightOf="@id/itemId"
    		android:layout_marginLeft="50dp">
 		<TextView 
-		    android:layout_width="wrap_content"
+		    android:layout_width="60dp"
 		    android:layout_height="wrap_content"
 		    android:textSize="22sp"
 		    android:id="@+id/name"/>
 		<TextView 
-		    android:layout_width="wrap_content"
+		    android:layout_width="40dp"
 		    android:layout_height="wrap_content"
 		    android:textSize="22sp"
 		    android:id="@+id/sortkey"/>
