--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -9,6 +9,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.org.role"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user.org"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.flow"/>
 		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
