--- a/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/activity_alphabet.xml
+++ b/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/activity_alphabet.xml
@@ -43,7 +43,7 @@
 	        android:layout_height="fill_parent"
 	        android:id="@+id/listView" />
 	</LinearLayout>
-	<dswork.android.lib.ui.AlphaBar
+	<dswork.android.lib.core.ui.AlphaBar
 	    android:layout_width="30dp"
 	    android:layout_height="fill_parent"
 	    android:layout_gravity="right"
