--- a/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/activity_index.xml
+++ b/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/activity_index.xml
@@ -24,7 +24,7 @@
 		        android:paddingBottom="4dp" />
         	 -->
 	    </android.support.v4.view.ViewPager>
-		<dswork.android.lib.ui.PosPoint 
+		<dswork.android.lib.core.ui.PosPoint 
 		   android:id="@+id/points"
 		   android:layout_width="fill_parent"
 		   android:layout_height="wrap_content"
