--- a/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/activity_oletab_fgm.xml
+++ b/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/activity_oletab_fgm.xml
@@ -3,7 +3,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     
-    <dswork.android.lib.ui.OleTab
+    <dswork.android.lib.core.ui.OleTab
         android:id="@+id/tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
