--- a/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/demo_get_f.xml
+++ b/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/demo_get_f.xml
@@ -24,7 +24,7 @@
 			    android:layout_marginLeft="30dp"
 			    android:text="@string/title"/>
 		</LinearLayout>
-	    <dswork.android.lib.ui.MultiCheck.MultiCheckListView
+	    <dswork.android.lib.core.ui.MultiCheck.MultiCheckListView
 	        android:id="@+id/listView" 
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent" 
