--- a/LibAndroid/DsWorkAndroidLib-core/res/layout/footer_refresh.xml
+++ b/LibAndroid/DsWorkAndroidLib-core/res/layout/footer_refresh.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/footer_refresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent" 
+    android:background="@drawable/listview_item_bg">
     <LinearLayout 
         android:id="@+id/moretips"
 	    android:layout_width="match_parent"
@@ -10,6 +11,7 @@
         android:orientation="horizontal"
         android:gravity="center">
         <TextView 
+            android:id="@+id/tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/footer_more"/>
