--- a/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/person_get_a.xml
+++ b/DsWorkAndroid/DsWorkAndroid-demo-v40/res/layout/person_get_a.xml
@@ -2,14 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rootLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/gray">
 	<LinearLayout
 	    android:orientation="vertical"
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent" >
 		<LinearLayout
 		    android:orientation="horizontal"
-		    android:background="@color/gray"
+		    android:background="@color/white"
 		    android:layout_width="fill_parent"
 		    android:layout_height="30dp" 
 		    android:paddingLeft="10dip"
@@ -32,11 +33,13 @@
 	        android:id="@+id/listView" 
 	        android:layout_width="match_parent"
 	        android:layout_height="match_parent"
+	        android:background="@color/gray"
 	        android:layout_marginTop="10dip"
 	        android:layout_marginLeft="10dip"
 	   		android:scrollbarStyle="outsideInset"
 	        android:fastScrollEnabled="true"
 	        android:footerDividersEnabled="false"
+	        android:fadingEdge="vertical"
 	        android:divider="@color/abs__background_holo_light"
 	        android:dividerHeight="10dip"/>
 	</LinearLayout>
