--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -140,8 +140,8 @@ span.menuTool-save{background:url(img/menu/save.png) no-repeat;}
 
 
 input.button, input.delete{padding:2px 3px 0px 3px;cursor:pointer;color:#000000;border:#000000 solid 1px;}
-input.button{background:url(img/button/button.gif) 0px 0px repeat-x;}
-input.delete{border:none;width:18px;height:18px;background:url(img/button/delete.gif) 0px 0px no-repeat;}
+input.button{background:null;}
+input.delete{border:none;width:18px;height:18px;background:url(img/button/delete.png) 0px 0px no-repeat;}
 input.text{width:200px;}
 input.readonlytext{width:200px;background-color:#e1e1e1;color:#000000;}
 textarea.readonlytext{width:100%;background-color:#e1e1e1;color:#000000;}
@@ -154,7 +154,7 @@ div.line{display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidd
 .queryTable td.input{text-align:left;padding-right:1px;}
 .queryTable td.query{text-align:center;}
 .queryTable input.text{width:80px;}
-.queryTable input.button{background:url(img/button/query.gif) 0px 0px repeat-x;}/*input.button*/
+.queryTable input.button{background:null;}
 
 
 .topTable, .bottomTable, .listTable{width:100%;border:#c2c2c2 solid 1px;background-color:#c2c2c2;}
