--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -1,19 +1,13 @@
-*{filter:expression(document.execCommand("BackgroundImageCache", false, true));}
-/*{filter:gray;}*/
-
-/*---全局---*/
-html,body{height:100%;border:0;padding:0px;margin:0px;}
+html,body{height:100%;border:0;padding:0em;margin:0em;}
 body{font-family:"宋体"}
 body, div, p, select, span, tr, td, a, input, textarea{font-size:12px;color:#182a2d;}
-form{margin:0px;padding:0px;}
+form{margin:0em;padding:0em;}
 body, table, tr{background-color:#ffffff;}
 table.normal{width:100%;}
 
-
 span.msg{color:#0000ff;}
 span.tips{color:#0000ff;}
-span.imp{padding-left:3px;color:#ff0000;font-weight:bold;}/*"*"*/
-
+span.imp{padding-left:3px;color:#ff0000;font-weight:bold;}
 
 a{text-decoration:none;}
 a:link{color:#182a2d;}
@@ -21,10 +15,8 @@ a:visited{color:#182a2d;}
 a:hover{color:#205e92;}
 a:active{color:#182a2d;}
 
-
 .menuTool{white-space:nowrap;}
 .menuTool a{padding:2px 0px 2px 18px;}
-
 .menuTool a.excel{background:url(img/file/excel.png) no-repeat 0px 0px;}
 .menuTool a.exe  {background:url(img/file/exe.png) no-repeat 0px 0px;}
 .menuTool a.file {background:url(img/file/file.png) no-repeat 0px 0px;}
@@ -38,7 +30,7 @@ a:active{color:#182a2d;}
 .menuTool a.del     {background:url(img/menu.png) no-repeat 0px  -25px;}
 .menuTool a.upd     {background:url(img/menu.png) no-repeat 0px  -50px;}
 .menuTool a.get     {background:url(img/menu.png) no-repeat 0px  -75px;}
-.menuTool a.insert  {background:url(img/menu.png) no-repeat 0px   0px;}
+.menuTool a.insert  {background:url(img/menu.png) no-repeat 0px    0px;}
 .menuTool a.delete  {background:url(img/menu.png) no-repeat 0px  -25px;}
 .menuTool a.update  {background:url(img/menu.png) no-repeat 0px  -50px;}
 .menuTool a.select  {background:url(img/menu.png) no-repeat 0px  -75px;}
@@ -91,7 +83,6 @@ a:active{color:#182a2d;}
 .menuTool-uparrow   {background:url(img/menu/uparrow.png)    no-repeat;}
 .menuTool-downarrow {background:url(img/menu/downarrow.png)  no-repeat;}
 
-
 .menuTool-excel{background:url(img/file/excel.png) no-repeat 0px 0px;}
 .menuTool-exe  {background:url(img/file/exe.png)   no-repeat 0px 0px;}
 .menuTool-file {background:url(img/file/file.png)  no-repeat 0px 0px;}
@@ -101,11 +92,11 @@ a:active{color:#182a2d;}
 .menuTool-psd  {background:url(img/file/psd.png)   no-repeat 0px 0px;}
 .menuTool-word {background:url(img/file/word.png)  no-repeat 0px 0px;}
 
-.menuTool-add     {background:url(img/menu.png) no-repeat 0px   0px;}
+.menuTool-add     {background:url(img/menu.png) no-repeat 0px    0px;}
 .menuTool-del     {background:url(img/menu.png) no-repeat 0px  -25px;}
 .menuTool-upd     {background:url(img/menu.png) no-repeat 0px  -50px;}
 .menuTool-get     {background:url(img/menu.png) no-repeat 0px  -75px;}
-.menuTool-insert  {background:url(img/menu.png) no-repeat 0px   0px;}
+.menuTool-insert  {background:url(img/menu.png) no-repeat 0px    0px;}
 .menuTool-delete  {background:url(img/menu.png) no-repeat 0px  -25px;}
 .menuTool-update  {background:url(img/menu.png) no-repeat 0px  -50px;}
 .menuTool-select  {background:url(img/menu.png) no-repeat 0px  -75px;}
@@ -139,96 +130,65 @@ a:active{color:#182a2d;}
 .menuTool-pie     {background:url(img/menu.png) no-repeat 0px -675px;}
 
 span.menuTool-save{background:url(img/menu/save.png) no-repeat;}
-
-
-input.button, input.delete{padding:2px 3px 0px 3px;cursor:pointer;color:#000000;border:#000000 solid 1px;}
-input.button{background:null;}
+input.button, input.delete{background:null;padding:0em 0.25em;margin:0em;line-height:1.5em;cursor:pointer;color:#000000;border:#000000 solid 1px;}
 input.delete{border:none;width:18px;height:18px;background:url(img/button/delete.png) 0px 0px no-repeat;}
 input.text{width:200px;}
 input.readonlytext{width:200px;background-color:#e1e1e1;color:#000000;}
 textarea.readonlytext{width:100%;background-color:#e1e1e1;color:#000000;}
 div.line{display:block;width:1px;height:3px;margin:0px;padding:0px;overflow:hidden;}
 
+.topTable, .bottomTable, .listTable{width:100%;border:#c2c2c2 solid 1px;background-color:#c2c2c2;}
+.topTable{border-bottom:none;}
+.bottomTable{border-top:none;}
+.bottomTable td{background-color:#d9e5fd;}
+.listTable{border:none;}
+.listTable tr{height:25px;line-height:1.5em;padding:0px 2px;}
+.listTable td{line-height:1.5em;vertical-align:middle;text-align:center;background-color:#ffffff;color:#2b3e44;word-wrap:break-word;word-break:break-all;}
+.listTable tr tr, .listTable td td{height:auto;line-height:normal;}
+.listTable tr.list_title{height:30px;}
+.listTable tr.list_title td{color:#24373d;}
+/*奇行*/.listTable tr.list_odd{}  .listTable tr.list_odd  td{background-color:#eff4ff;}
+/*偶行*/.listTable tr.list_even{} .listTable tr.list_even td{background-color:#ffffff;}
+/*停留*/.listTable tr.list_over{} .listTable tr.list_over td{background-color:#fdfad0;}
+/*默认*/.listTable tr.list{}      .listTable tr.list      td{background-color:#ffffff;}
+
+.listLogo{width:100%;border:#c2c2c2 solid 1px;}
+.listLogo tr{height:30px;line-height:1.5em;padding:0em;}
+.listLogo td{color:#000000;text-align:right;vertical-align:middle;white-space:nowrap;padding:0px 5px;}
+.listLogo td.title{text-align:left;}
+.listLogo td, .listTable tr.list_title td, .listTable tr.list_title th{background-color:#e0ecff;}
+.listLogo input.button{background-color:#f0f1f2;}
 
 .queryTable{width:100%;border:#c2c2c2 solid 1px;}
-.queryTable td{background-color:#ffffff;height:25px;padding:0px 0px 0px 0px;}
+.queryTable tr{height:25px;}
+.queryTable td{background-color:#ffffff;padding:0em;}
 .queryTable td.title{text-align:right;padding-left:1px;}
 .queryTable td.input{text-align:left;padding-right:1px;}
 .queryTable td.query{text-align:center;}
 .queryTable input.text{width:80px;}
-.queryTable input.button{background-color:#e0ecff;height:20px;line-height:16px;padding:0px;margin:0px;width:38px;
-  background: -webkit-linear-gradient(top,#eff5ff 0,#e0ecff 100%);
-  background: -moz-linear-gradient(top,#eff5ff 0,#e0ecff 100%);
-  background: -o-linear-gradient(top,#eff5ff 0,#e0ecff 100%);
-  background: linear-gradient(to bottom,#eff5ff 0,#e0ecff 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#eff5ff,endColorstr=#e0ecff,GradientType=0);
-}
+.queryTable input.button{background-color:#e0ecff;height:20px;padding:0em;margin:0em;width:38px;}
 
-
-.topTable, .bottomTable, .listTable{width:100%;border:#c2c2c2 solid 1px;background-color:#c2c2c2;}
-.listTable tr{height:25px;}
-.listTable tr tr{height:auto;}
-.listTable td{vertical-align:middle;text-align:center;}
-.topTable{border-bottom:none;}/*表格上面*/
-.bottomTable{border-top:none;}/*表格下面*/
-.bottomTable td{background-color:#d9e5fd;}
-.listTable{border:none;}/*数据表格*/
-.listTable tr{padding:0px 2px 0px 2px;}
-.listTable td{background-color:#ffffff;color:#2b3e44;word-wrap:break-word;word-break:break-all;}
-/*标题*/.listTable tr.list_title{height:30px;}
-.listTable tr.list_title td{color:#24373d;}
-/*奇数*/.listTable tr.list_odd{}
-.listTable tr.list_odd td{background-color:#eff4ff;}
-/*偶数*/.listTable tr.list_even{}
-.listTable tr.list_even td{background-color:#ffffff;}
-/*停留*/.listTable tr.list_over{}
-.listTable tr.list_over td{background-color:#fdfad0;}
-/*默认*/.listTable tr.list{height:23px;}
-.listTable tr.list td{background-color:#ffffff;}
-
-
-table.listLogo{width:100%;border:#c2c2c2 solid 1px;}
-table.listLogo td{color:#000000;height:25x;text-align:right;vertical-align:middle;white-space:nowrap;padding:5px 5px 5px 5px;}
-table.listLogo td.title{text-align:left;}
-table.listLogo td,
-.listTable tr.list_title td,
-.listTable tr.list_title th{
-  background-color: #e0ecff;
-  background: -webkit-linear-gradient(top,#eff5ff 0,#e0ecff 100%);
-  background: -moz-linear-gradient(top,#eff5ff 0,#e0ecff 100%);
-  background: -o-linear-gradient(top,#eff5ff 0,#e0ecff 100%);
-  background: linear-gradient(to bottom,#eff5ff 0,#e0ecff 100%);
-  background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#eff5ff,endColorstr=#e0ecff,GradientType=0);
-}
-
-
-
-.pageview, .pageview *{margin:0px;padding:0px;font-family:tahoma;color:#182a2d;font-size:12px;height:30px;line-height:30px;vertical-align:text-middle;}
+.pageview, .pageview *{margin:0em;padding:0em;font-family:tahoma;color:#182a2d;font-size:12px;height:30px;line-height:30px;vertical-align:text-middle;}
 .pageview{float:right;font-family:tahoma;text-align:right;padding:0px 10px 0px 0px;width:100%;}
 .pageview a{text-decoration:none;border:none;}
 .pageview a:link{}
 .pageview a:visited{}
 .pageview a:hover{color:#205e92;}
 .pageview a:active{}
-.pageview a.first{width:38px;padding-left:14px;background:url(img/pageview/first.png) no-repeat;background-position:left center;}
-.pageview a.prev{width:38px;padding-left: 13px;background:url(img/pageview/prev.png ) no-repeat;background-position:left center;}
-.pageview a.next{width:38px;padding-right:13px;background:url(img/pageview/next.png ) no-repeat;background-position:right center;}
-.pageview a.last{width:38px;padding-right:14px;background:url(img/pageview/last.png ) no-repeat;background-position:right center;}/**/
-.pageview input     {line-height:16px;height:16px;text-align:center;}
+.pageview a.first{width:38px;padding-left: 14px;background:url(img/pageview/first.png) no-repeat;background-position:left center;}
+.pageview a.prev {width:38px;padding-left: 13px;background:url(img/pageview/prev.png ) no-repeat;background-position:left center;}
+.pageview a.next {width:38px;padding-right:13px;background:url(img/pageview/next.png ) no-repeat;background-position:right center;}
+.pageview a.last {width:38px;padding-right:14px;background:url(img/pageview/last.png ) no-repeat;background-position:right center;}
+.pageview input{line-height:16px;height:16px;text-align:center;}
 .pageview input.input{width:25px;border:#7998c6 solid 1px;font-size:12px;}
-.pageview input.go  {width:30px;cursor:pointer;border:#7998C6 solid 1px;height:18px;background:none;font-size:10px;font-weight:bold;}
-.pageview select{line-height:18px;height:18px;width:40px;text-align:center;cursor:pointer;border:none;border:#7998c6 solid 1px;}
+.pageview input.go{width:30px;cursor:pointer;border:#7998C6 solid 1px;height:18px;background:none;font-size:10px;font-weight:bold;}
+.pageview select{height:18px;width:40px;line-height:1.5em;text-align:center;cursor:pointer;border:none;border:#7998c6 solid 1px;}
 
-
-
-td.form_title, td.form_input{height:25px;padding-left:3px;padding-right:3px;}
-/*表单标题*/td.form_title{text-align:right;background-color:#e6eefe;}
-/*表单内容*/td.form_input{text-align:left;background-color:#ffffff;}
-/*表单信息*/
-td.form_tips{text-align:center;height:50px;vertical-align:middle;}
-/*表单底部列(一般放置铵钮)*/
+/*表单*/
+/*标题*/td.form_title{padding-left:3px;padding-right:3px;text-align:right;background-color:#e6eefe;}
+/*内容*/td.form_input{padding-left:3px;padding-right:3px;text-align:left;background-color:#ffffff;}
+/*信息*/td.form_tips {text-align:center;height:50px;vertical-align:middle;}
+/*底部列(一般放置铵钮)*/
 td.form_bottom{height:30px;background-color:#ffffff;text-align:center;vertical-align:middle;border-top:#6ea5eb solid 1px;}
 
 .treebody{height:100%;}
@@ -236,7 +196,7 @@ td.form_bottom{height:30px;background-color:#ffffff;text-align:center;vertical-a
 
 .easyuiMenu{width:120px;}
 .divMenuRight{width:120px;border:none;background-color:#aaaaaa;text-align:left;padding:0px;position:absolute;visibility:hidden;}
-.divMenuRight ul{margin:1px;padding:1px;cursor: pointer;list-style:none outside none;background-color:#f1f1f1;}
+.divMenuRight ul{margin:1px;padding:1px;cursor:pointer;list-style:none outside none;background-color:#f1f1f1;}
 .divMenuRight ul li{margin:2px 0px;padding:2px 0px 2px 0px}
 .divMenuRight ul li.link{padding:2px 0px 2px 18px}
 .divMenuRight ul li.sep{padding:0px;height:1px;background-color:#dddddd;}
@@ -244,3 +204,5 @@ td.form_bottom{height:30px;background-color:#ffffff;text-align:center;vertical-a
 #div_maskContainer{display:none;}
 #div_maskBackground{z-index:9999;position:absolute;left:0px;top:0px;background-color:#EFF4FA;filter:alpha(opacity = 100);}
 #div_maskMessage{z-index:10000;width:300px;height:60px;position:absolute;border:1px outset #B4E0F2;padding-top:40px;text-align:center;background-color:#E9F0F9;filter:alpha(opacity = 100);!important}
+
+.xheTool span{height:22px;overflow:hidden;}
