--- a/web/web/themes/default/frame.css
+++ b/web/web/themes/default/frame.css
@@ -5,10 +5,6 @@ form{margin:0em;padding:0em;}
 body, table, tr{background-color:#ffffff;}
 table.normal{width:100%;}
 
-span.msg{color:#0000ff;}
-span.tips{color:#0000ff;}
-span.imp{padding-left:3px;color:#ff0000;font-weight:bold;}
-
 a{text-decoration:none;}
 a:link{color:#182a2d;}
 a:visited{color:#182a2d;}
@@ -129,8 +125,12 @@ a:active{color:#182a2d;}
 .menuTool-bar     {background:url(img/menu.png) no-repeat 0px -650px;}
 .menuTool-pie     {background:url(img/menu.png) no-repeat 0px -675px;}
 
+span.msg{color:#0000ff;}
+span.tips{color:#0000ff;}
+span.imp{padding-left:3px;color:#ff0000;font-weight:bold;}
 span.menuTool-save{background:url(img/menu/save.png) no-repeat;}
-input.button, input.delete{background:null;padding:0em 0.25em;margin:0em;line-height:1.5em;cursor:pointer;color:#000000;border:#000000 solid 1px;}
+input.button,
+input.delete{background:null;padding:0em 0.25em;margin:0em;line-height:1.5em;cursor:pointer;color:#000000;border:#000000 solid 1px;}
 input.delete{border:none;width:18px;height:18px;background:url(img/button/delete.png) 0px 0px no-repeat;}
 input.text{width:200px;}
 input.readonlytext{width:200px;background-color:#e1e1e1;color:#000000;}
