--- a/web/share/dswork/Views/Commons/Upd.cshtml
+++ b/web/share/dswork/Views/Commons/Upd.cshtml
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <title>@RenderSection("title", false)</title>
-<link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css" href="/web/js/easyui/themes/default/easyui.css" />
 <link rel="stylesheet" type="text/css" href="/web/themes/default/frame.css" />
 <script type="text/javascript" src="/web/js/jquery/jquery.js"></script>
 <script type="text/javascript" src="/web/js/easyui/jquery.easyui.js"></script>
