--- a/CodeBuilder/htmlgen/template/edit.vm
+++ b/CodeBuilder/htmlgen/template/edit.vm
@@ -5,7 +5,7 @@
 <head>
 <meta charset="UTF-8" />
 <title></title>
-<link rel="stylesheet" type="text/css" href="../../../web/js/easyui/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css" href="../../../web/js/easyui/themes/default/easyui.css" />
 <link rel="stylesheet" type="text/css" href="../../../web/themes/default/frame.css" />
 <script type="text/javascript" src="../../../web/js/jquery/jquery.js"></script>
 <script type="text/javascript" src="../../../web/js/jquery/jquery.form.js"></script>
