--- a/DsCommon/.settings/org.eclipse.wst.common.component
+++ b/DsCommon/.settings/org.eclipse.wst.common.component
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="DsCommon">
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/common"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
@@ -10,6 +11,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user.org"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.flow"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.common.user.role"/>
 		<property name="context-root" value="DsCommon"/>
 		<property name="java-output-path" value="/DsCommon/web/WEB-INF/classes"/>
 	</wb-module>
