--- a/LibAndroid/DsWorkAndroidLib-core/res/values/color.xml
+++ b/LibAndroid/DsWorkAndroidLib-core/res/values/color.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
      <color name="gray">#dddddd</color>
-     <color name="dark_gray">#666666</color>
+     <color name="gray_dark">#666666</color>
      <color name="white">#ffffff</color>
      <color name="blue">#0000ff</color>
      <color name="blue_light">#00dddd</color>
