--- a/LibAndroid/DsWorkAndroidLib-core/res/layout/item_chk.xml
+++ b/LibAndroid/DsWorkAndroidLib-core/res/layout/item_chk.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <CheckBox
-        android:id="@+id/itemChk"
+        android:id="@+id/item_chk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="false"
