--- a/LibAndroid/DsWorkAndroidLib-core/res/layout/item_id.xml
+++ b/LibAndroid/DsWorkAndroidLib-core/res/layout/item_id.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 	<TextView 
-	    android:id="@+id/itemId"
+	    android:id="@+id/item_id"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:textSize="22sp"/>
