--- a/LibAndroid/DsWorkAndroidLib-core/res/layout/item_menu.xml
+++ b/LibAndroid/DsWorkAndroidLib-core/res/layout/item_menu.xml
@@ -3,7 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 	<ImageButton 
-	    android:id="@+id/itemMenu"
+	    android:id="@+id/item_menu"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
        	android:focusable="false"
