--- a/web/web/js/jskey/themes/calendar/lightGreen/skin.css
+++ b/web/web/js/jskey/themes/calendar/lightGreen/skin.css
@@ -1,47 +1,45 @@
-.WebDate {border:1px solid #999999;height:16px;background:#ffffff url(../datePicker.gif) no-repeat right;}
-/*容器*/
-div.CalendarPanel {width:176px;background-color:#ffffff;border:1px solid #77bbaa;font-size:12px;}
-/*####################年月选择部分####################*/
-table.CalendarTop {border:0px solid #77bbaa;font-size:12px;}
-.CalendarTop tr.title {}/*选择年月行*/
-/*上一月下一月共同样式*/
-.CalendarTop tr.title input {font-size:12px;padding-left:2px;padding-right:2px;padding-top:2px;cursor:pointer;color:#000000;border:1px solid #77bbaa;background-color:#bdebee;}
-.CalendarTop tr.title th.prevMonth {width:5%;}/*放置上一月的按钮td*/
-.CalendarTop tr.title th.prevMonth input {width:20px;}/*上一月的按钮*/
-.CalendarTop tr.title th.YearMonth {width:90%;}/*放置年月下拉框的td*/
-.CalendarTop tr.title th.YearMonth select {font-size:12px;width:60px;}/*年月下拉框*/
-.CalendarTop tr.title select.Year {}/*年下拉框*/
-.CalendarTop tr.title select.Month {}/*月下拉框*/
-.CalendarTop tr.title th.nextMonth {width:5%;}/*放置下一月的按钮td*/
-.CalendarTop tr.title th.nextMonth input {width:20px;}/*下一月的按钮*/
+.WebDate {cursor:pointer;border:1px solid #999999;height:16px;background:#ffffff url(../datePicker.gif) no-repeat right;}
+.jskey_cal {width:204px;border:1px solid #77bbaa;padding:2px;background-color:#ffffff;box-sizing:content-box;}
+.jskey_cal * {padding:0;margin:0 auto;width:auto;background-color:inherit;font-size:12px;font-family:"Microsoft Yahei","\5B8B\4F53",arial;color:#000000;text-align:center;vertical-align:middle;box-sizing:content-box;}
+.jskey_cal .div {width:202px;}
 
-/*####################日期选择部分####################*/
-/*日期表格*/
-table.CalendarDate {border:0px solid #ffffff;background-color:#ffffff;font-size:12px;}
-/*日期头*/
-.CalendarDate tr.title {}
-/*头部星期几td*/
-.CalendarDate tr.title th {padding-top:3px;padding-bottom:3px;text-align:center;font-weight:normal;background-color:#bdebee;color:#000000;}
-/*日期行*/
-.CalendarDate tr.date {}
-.CalendarDate tr.date td {padding-top:3px;padding-bottom:3px;text-align:center;background-color:#daf3f5;}
-.CalendarDate tr.date td.sun {cursor:default;color:#ff0000;}/*星期天文字*/
-.CalendarDate tr.date td.sat {cursor:default;color:#0000ff;}/*星期六文字*/
-.CalendarDate tr.date td.day {cursor:default;color:#000000;}/*星期一至五*/
-.CalendarDate tr.date td.today {cursor:default;background-color:#bdebee;color:#000000;}/*当日日期*/
-.CalendarDate tr.date td.selDay {cursor:default;background-color:#72cc99;color:#000000;}/*已被选择的日期*/
-.CalendarDate tr.date td.dayOver {cursor:pointer;background-color:#99dee9;}/*鼠标移过*/
+.jskey_cal .jsarr {width:18px;height:18px;overflow:hidden;margin:0 auto;padding:0;display:block;}
+.jskey_cal .jsarr div {box-sizing:content-box;margin:0;padding:0;width:0;height:0;border:5px dashed transparent;overflow:hidden;}
+.jskey_cal .jsarr .up {margin:1px 0px 0px 4px;border-bottom:5px solid #000;}
+.jskey_cal .jsarr .down {margin:7px 0px 0px 4px;left:1px;border-top:5px solid #000;}
+.jskey_cal .jsarr .left {margin:4px 0px 0px 1px;left:-2px;border-right:5px solid #000;}
+.jskey_cal .jsarr .right {margin:4px 0px 0px 7px;left:4px;border-left:5px solid #000;}
 
-/*####################时间选择部分####################*/
-/*时间表格*/
-table.CalendarTime {border:0px solid #ffffff;background-color:#ffffff;font-size:12px;}
-.CalendarTime tr {}
-.CalendarTime tr td {}
-.CalendarTime tr td select {font-size:12px;width:40px;}/*时分秒下拉框*/
-.CalendarTime tr td select.Hour {}/*时间下拉框*/
-.CalendarTime tr td select.Minute {}/*分钟下拉框*/
-.CalendarTime tr td select.Second {}/*秒钟下拉框*/
+.jskey_cal .btn {width:18px;height:16px;line-height:16px;overflow:hidden;cursor:pointer;background-color:#daf3f5;float:left;}
+.jskey_cal .title {line-height:20px;font-weight:bold;background-color:#77bbaa;color:#ffffff;}
+.jskey_cal th,.jskey_cal .dy,
+.jskey_cal td,.jskey_cal .dm,
+.jskey_cal .btn {border:1px solid #77bbaa;}
 
-/*####################按钮部分####################*/
-div.CalendarButtonDiv {padding:4px 4px 4px 4px;background-color:#ffffff;}
-.CalendarButtonDiv input {width:40px;font-size:12px;padding-left:2px;padding-right:2px;cursor:pointer;color:#000000;border:1px solid #77bbaa;padding-top:2px;background-color:#bdebee;}
+.jskey_cal .dymd {border:0;font-size:12px;}
+.jskey_cal .dymd .dy {float:left;}
+.jskey_cal .dymd .dm {float:right;}
+.jskey_cal .dymd .dp {border-top:none;border-bottom:none;border-left:none;}
+.jskey_cal .dymd .dn {border-top:none;border-bottom:none;border-right:none;}
+.jskey_cal .dymd .Year {width:60px;border:none;background-color:#ffffff;}
+.jskey_cal .dymd .Month {width:59px;border:none;background-color:#ffffff;}
+
+.jskey_cal .dymd:after {content:"";display:block;height:0;visibility:hidden;clear:both;}
+
+.jskey_cal .date {position:relative;margin:2px 0;}
+.jskey_cal .date .choose {width:100%;position:absolute;left:0;top:0;}
+.jskey_cal .date .close {padding-right:3px;cursor:pointer;}
+.jskey_cal .date table {position:relative;width:100%;border:0px;font-size:12px;border-collapse:collapse;border-spacing:0px;}
+.jskey_cal .date td {line-height:18px;text-align:center;background-color:#daf3f5;color:#cccccc;}
+.jskey_cal .date .holiday {cursor:pointer;color:#ff0000;}/*双休日，节假日*/
+.jskey_cal .date .day {color:#000000;}/*工作日*/
+.jskey_cal .date .sel {background-color:#77bbaa;color:#ffffff;}/*已选*/
+.jskey_cal .date .today {background-color:#99dee9;color:#000000;}
+.jskey_cal .date .over {cursor:pointer;background-color:#99dee9;color:#000000;}
+
+.jskey_cal dhmsbtn {}
+.jskey_cal .dhms {float:left;}
+.jskey_cal .dhms .btn {width:16px;background-color:#ffffff;}
+.jskey_cal .dhms label {float:left;line-height:18px;}
+.jskey_cal .dbtn {float:right;padding-left:2px;}
+.jskey_cal .dbtn .btn {float:left;width:auto;margin:0;padding:0 4px;cursor:pointer;margin-left:-1px;}
