--- a/DsEp/web/passport/passport.css
+++ b/DsEp/web/passport/passport.css
@@ -6,7 +6,7 @@ a:link,a:visited,a:active{color:#0000ff;outline:none;}
 a:hover{color:#205e92;color:#0000ff;text-decoration:underline;}
 span {color:#ff0000;font-size:14px;line-height:45px;width:190px;text-align:left;display:block;float:right;}
 .title {background-color:#0090da;color:#ffffff;font-size:36px;font-weight:bold;text-align:center;padding:50px 0px;border-bottom:solid #ccc 1px;}
-.login{width:800px;padding:0px;margin:0px auto;overflow:hidden;}/*border:#ccc solid 1px;border-radius:10px;*/
+.login{width:800px;padding:0px;margin:0px auto;overflow:hidden;border:#ccc solid 1px;border-radius:10px;}/*border:#ccc solid 1px;border-radius:10px;*/
 .view {background-color:#f1f9fe;width:100%;padding:20px 0 60px 0;}
 .box{width:600px;margin:15px auto;overflow:hidden;text-align:left;border:none;clear:both;}
 
@@ -14,9 +14,9 @@ body {background-color:#f1f9fe;}
 .vbox{width:380px;background-color:#fff;border:#cccccc solid 1px;padding:5px 10px;overflow:hidden;vertical-align:middle;}
 .vbox input{background-color:#fff;width:255px;height:38px;margin-left:8px;padding-left:8px;border:none;border-left:#cccccc solid 1px;vertical-align:middle;}
 .vbox input.code{width:180px;}
-.vbox img {border:none;}
+.vbox img {border:none;cursor:pointer;vertical-align:middle;}
 
-.button{width:400px;border:#0090da solid 1px;height:50px;line-height:50px;border:none;background-color:#0090da;color:#ffffff;}
+.button{width:400px;border:#0090da solid 1px;height:50px;line-height:50px;border:none;background-color:#0090da;color:#ffffff;cursor:pointer;vertical-align:middle;}
 
-.cp{background-color:#f1f1f1;position:fixed;width:100%;left:0;bottom:0;font-size:12px;font-weight:normal;padding:15px;border-top:solid #ccc 1px;overflow:hidden;color:#1762ae;text-align:center;}
+.cp{background-color:#ffffff;position:fixed;width:100%;left:0;bottom:0;color:#0C5AD1;font-size:12px;font-weight:normal;padding:15px 0;border-top:solid #ccc 1px;overflow:hidden;text-align:center;}
 .cp a {font-size:12px;font-weight:normal;font-family:Arial;}
