--- a/DsEp/.settings/org.eclipse.wst.common.component
+++ b/DsEp/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?>
+<project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="DsEp">
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/common"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/config"/>
 		<wb-resource deploy-path="/" source-path="/web" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.ep"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.person"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.cms"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/dswork.bbs"/>
 		<property name="context-root" value="DsEp"/>
 		<property name="java-output-path" value="/DsEp/web/WEB-INF/classes"/>
 	</wb-module>
