--- a/DsWorkAndroid/Demo/DsWorkAndroid-demo-v40/res/layout/activity_download_one.xml
+++ b/DsWorkAndroid/Demo/DsWorkAndroid-demo-v40/res/layout/activity_download_one.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="dswork.android.demo.component.DownloadOneActivity" >
+    tools:context="dswork.android.demo.component.downloadone.DownloadOneActivity" >
 
     <ProgressBar
         android:id="@+id/pgb_download"
@@ -16,20 +16,20 @@
         android:layout_alignParentTop="true"/>
 
     <Button
-        android:id="@+id/btn_download"
+        android:id="@+id/btn_download_start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/pgb_download"
-        android:layout_toLeftOf="@+id/btn_pause"
+        android:layout_toLeftOf="@+id/btn_download_stop"
         android:text="下载" />
     
     <Button
-        android:id="@+id/btn_pause"
+        android:id="@+id/btn_download_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btn_download"
-        android:layout_alignBottom="@+id/btn_download"
+        android:layout_alignBaseline="@+id/btn_download_start"
+        android:layout_alignBottom="@+id/btn_download_start"
         android:layout_alignRight="@+id/pgb_download"
-        android:text="暂停" />
+        android:text="停止" />
 
 </RelativeLayout>
