--- a/DsWorkAndroid/Demo/DsWorkAndroid-demo-v40/res/layout/activity_download_list.xml
+++ b/DsWorkAndroid/Demo/DsWorkAndroid-demo-v40/res/layout/activity_download_list.xml
@@ -6,8 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="dswork.android.demo.component.downloadone.DownloadOneActivity" >
+    tools:context="dswork.android.demo.component.downloadlist.DownloadListActivity" >
 
-    <include layout="@layout/download_one"/>
+    <ListView
+        android:id="@+id/lv_download"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></ListView>
 
 </RelativeLayout>
