--- a/DsDemo/DemoNet/DemoNet/Areas/Manage/Views/Demo/AddDemo1.cshtml
+++ b/DsDemo/DemoNet/DemoNet/Areas/Manage/Views/Demo/AddDemo1.cshtml
@@ -31,7 +31,7 @@
 	</tr>
 	<tr>
 		<td class="form_title">创建时间：</td>
-		<td class="form_input"><input type="text" name="foundtime" value="" /></td>
+		<td class="form_input"><input type="text" name="foundtime" class="WebDate" format="yyyy-MM-dd" value="" /></td>
 	</tr>
 </table>
 </form>
