--- a/DsDemo/DemoNet/DemoNet/Areas/Manage/Views/Demo/GetDemo.cshtml
+++ b/DsDemo/DemoNet/DemoNet/Areas/Manage/Views/Demo/GetDemo.cshtml
@@ -29,7 +29,7 @@ $(function(){
 	</tr>
 </table>
 <div class="line"></div>
-<form id="queryForm" method="post" action="GetDemo.htm" class="pure-form">
+<form id="queryForm" method="post" action="GetDemo.htm">
 <table border="0" cellspacing="0" cellpadding="0" class="queryTable">
 	<tr>
 		<td class="input">
@@ -46,10 +46,11 @@ $(function(){
 <table id="dataTable" border="0" cellspacing="1" cellpadding="0" class="listTable">
 	<tr class="list_title">
 		<td style="width:2%"><input id="chkall" type="checkbox" /></td>
-		<td style="width:3%">操作</td>
+		<td style="width:5%">操作</td>
 		<td>标题</td>
 		<td>内容</td>
 		<td>创建时间</td>
+		<td style="width:15%">操作</td>
 	</tr>
 @{
     int i = 0;
@@ -63,10 +64,13 @@ $(function(){
 		<td>@d.title</td>
 		<td>@d.content</td>
 		<td>@d.foundtime</td>
+		<td class="menuTool">
+			<a class="update" href="UpdDemo1.htm?keyIndex=@d.id">修改</a>
+			<a class="delete" href="DelDemo.htm?keyIndex=@d.id">删除</a>
+		</td>
 	</tr>
 }
 </table>
-<input id="_submit_" type="submit" style="display:none;" />
 <input name="page" type="hidden" value="@ViewBag.pageModel.CurrentPage" />
 </form>
 <table border="0" cellspacing="0" cellpadding="0" class="bottomTable">
