--- a/DsDemo/DemoNet/DemoNet/Areas/Manage/Views/Demo/UpdDemo1.cshtml
+++ b/DsDemo/DemoNet/DemoNet/Areas/Manage/Views/Demo/UpdDemo1.cshtml
@@ -33,7 +33,7 @@
 	</tr>
 	<tr>
 		<td class="form_title">创建时间：</td>
-		<td class="form_input"><input type="text" name="foundtime" value="@ViewBag.po.foundtime" /></td>
+		<td class="form_input"><input type="text" name="foundtime" class="WebDate" format="yyyy-MM-dd" value="@ViewBag.po.foundtime" /></td>
 	</tr>
 </table>
 <input type="hidden" name="id" value="@ViewBag.po.id" />
